# akfund-mcp

./: README.md  mcp_server.py  pyproject.toml
akfund/: __init__.py  _http.py  brief.py  calendar.py  checklist.py  fees.py  fund.py  info.py  market.py  news.py  overlap.py  rank.py  sector.py  server.py  trades.py
examples/: daily_report.py
