[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akfund-mcp"
version = "0.4.0"
description = "China mutual fund & market data toolkit — realtime estimates, NAV history, sector quotes, and news aggregation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["fund", "finance", "china", "eastmoney", "A-share", "基金", "公募基金", "mcp"]
dependencies = ["mcp"]

[project.scripts]
akfund-mcp = "akfund.server:main"

[tool.hatch.build.targets.wheel]
packages = ["akfund"]

[project.urls]
Repository = "https://github.com/solost23/akfund-mcp"
